--- a/README
+++ b/README
@@ -5,7 +5,7 @@ Elvish XDG
 
 ```elvish
 epm:install github.com/chlorm/elvish-xdg
-use github.com/chlorm/elvish-xdg
+use github.com/chlorm/elvish-xdg/xdg
 
 $xdg:xdg_cache_home
 $xdg:xdg_config_home
